--- a/hms-hotel/hms-server-room/pom.xml
+++ b/hms-hotel/hms-server-room/pom.xml
@@ -40,7 +40,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.11</version><!--$NO-MVN-MAN-VER$ -->
         </dependency>
-
+        <!-- config-client -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-config-client</artifactId>
+        </dependency>
         <!--Lombok - 是一个可以通过简单的注解形式来帮助我们简化消除一些必须有但显得很臃肿的Java代码的工具，
             通过使用对应的注解，可以在编译源码的时候生成对应的方法。简单试了以下这个工具还挺好玩的，
             加上注解我们就不用手动写 getter\setter、构建方式类似的代码了。-->
