--- a/hms-hotel/hms-server-config/src/main/resources/application.yml
+++ b/hms-hotel/hms-server-config/src/main/resources/application.yml
@@ -10,6 +10,13 @@ spring:
         git:
           uri: https://github.com/lshaoshuai/springcloud-config
           search-paths: luoconfig
+#  仓库中的配置文件会被转换成web接口，访问可以参照以下的规则：
+#
+#  /{application}/{profile}[/{label}]
+#  /{application}-{profile}.yml
+#  /{label}/{application}-{profile}.yml
+#  /{application}-{profile}.properties
+#  /{label}/{application}-{profile}.properties
 
 eureka:
   instance:
