--- a/hms-common/hms-common-core/pom.xml
+++ b/hms-common/hms-common-core/pom.xml
@@ -7,11 +7,13 @@
         <groupId>com.luo</groupId>
         <version>1.0.0</version>
     </parent>
+
     <modelVersion>4.0.0</modelVersion>
 
     <!-- 项目模块 -->
     <groupId>com.luo</groupId>
     <artifactId>hms-common-core</artifactId>
+    <version>${project.parent.version}</version>
 
     <dependencies>
         <dependency>
@@ -34,16 +36,39 @@
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>1.3.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-oauth2</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
 
+        <!--引入Json依赖 -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.47</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-eureka</artifactId>
             <version>${eureka.starter.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-annotations</artifactId>
+            <version>1.5.13</version>
+        </dependency>
+
     </dependencies>
 </project>
