--- a/hms-provider/hms-provider-ums/pom.xml
+++ b/hms-provider/hms-provider-ums/pom.xml
@@ -3,18 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>hms-springcloud</artifactId>
+        <artifactId>hms-provider</artifactId>
         <groupId>com.luo</groupId>
         <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>hms-provider-api</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>hsm-provider-rms-api</module>
-        <module>hms-provider-ums-api</module>
-    </modules>
+    <artifactId>hms-provider-ums</artifactId>
 
 
 </project>
