--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,11 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-eureka</artifactId>
+                <version>${eureka.starter.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
