--- a/hms-common/hms-common-core/pom.xml
+++ b/hms-common/hms-common-core/pom.xml
@@ -38,6 +38,11 @@
             <!--<groupId>org.springframework.cloud</groupId>-->
             <!--<artifactId>spring-cloud-starter-oauth2</artifactId>-->
         <!--</dependency>-->
+        <!--aop-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
