--- a/hms-provider/hms-provider-hbs/pom.xml
+++ b/hms-provider/hms-provider-hbs/pom.xml
@@ -15,6 +15,14 @@
     </description>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-sleuth-zipkin-stream</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-stream-rabbit</artifactId>
+        </dependency>
 
     </dependencies>
 
