--- a/hms-common/hms-common-core/pom.xml
+++ b/hms-common/hms-common-core/pom.xml
@@ -54,7 +54,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
-
+        <!-- 数据库连接池= -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.0.5</version>
+        </dependency>
         <!--引入Json依赖 -->
         <dependency>
             <groupId>com.alibaba</groupId>
