--- a/hms-gateway/pom.xml
+++ b/hms-gateway/pom.xml
@@ -39,6 +39,11 @@
             <artifactId>gson</artifactId>
             <version>2.8.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>1.10</version>
+        </dependency>
     </dependencies>
 
 </project>
