--- a/hms-provider-api/pom.xml
+++ b/hms-provider-api/pom.xml
@@ -15,6 +15,8 @@
     <modules>
         <module>hsm-provider-rms-api</module>
         <module>hms-provider-ums-api</module>
+        <module>hms-provider-hbs-api</module>
+        <module>hms-provider-oms-api</module>
     </modules>
     <dependencies>
         <dependency>
