--- a/hms-provider/hms-provider-hbs/pom.xml
+++ b/hms-provider/hms-provider-hbs/pom.xml
@@ -34,6 +34,12 @@
             <version>1.0.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.luo</groupId>
+            <artifactId>hms-provider-ims-api</artifactId>
+            <version>1.0.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
